faster execution, requires lastest blender