@@ -2,25 +2,26 @@ package edu.usf.experiment.universe.morse;
 
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
-import java.net.ServerSocket;
 import java.net.Socket;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.StringTokenizer;
 
+import edu.usf.experiment.utils.Debug;
+
 public class MorseUtils {
 
 	private static HashMap<String, Integer> streamPorts;
+	private static Process simProcess;
 
 	public static void startSimulator() {
 			
-			String[] envp = { "DISPLAY=:0.0", "MORSE_SILENT_PYTHON_CHECK=1", "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games" };
+			String[] envp = { "DISPLAY=:0.0", "MORSE_SILENT_PYTHON_CHECK=1", "PATH=/home/martin/blender/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games" };
 			try {
-				// Wait to release the port
-				Thread.sleep(500);
 				// Execute the process
 				Process p = Runtime.getRuntime().exec("killall -9 blender", envp);
 				
@@ -29,18 +30,22 @@ public class MorseUtils {
 			    	System.err.print((char)p.getErrorStream().read());
 				}
 				
-				p = Runtime.getRuntime().exec("morse run morris", envp);
+				File output;
+				if (Debug.printMorseErr)
+					output = new File("morseout.txt");
+				else
+					output = new File("/dev/null");
+				
+				ProcessBuilder builder = new ProcessBuilder("morse", "run", "morris");
+				for (String envv : envp)
+					builder.environment().put(envv.split("=")[0], envv.split("=")[1]);
+				builder.redirectOutput(output);
+				builder.redirectError(output);
+				simProcess = builder.start(); // may throw IOException
 				
 				cacheStreamPorts();
 				
-				while(p.getErrorStream().available() > 0)
-				{
-			    	System.err.print((char)p.getErrorStream().read());
-				}
-			    
 			} catch (IOException e) {
-				e.printStackTrace();
-			} catch (InterruptedException e) {
 				// TODO Auto-generated catch block
 				e.printStackTrace();
 			}
